kubernetes/workloads/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: default
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
